[package]
name = "jenks_breaks"
version = "0.1.0"
edition = "2021"

# Metadata for building a Python extension module
[lib]
crate-type = ["cdylib"]

[dependencies]
# PyO3 is required for binding Rust with Python
pyo3 = { version = "0.18", features = ["extension-module"] }
rayon = "1.5"  # for parallel iterators

[build-dependencies]
# Maturin helps build the Rust code as a Python extension
maturin = "1.7.1"
